<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alec.loancalculator.MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/car_cost_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/car_cost"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/car_cost_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/down_payment_layout"
        android:layout_below="@id/car_cost_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="25sp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/down_payment"/>

        <EditText
            android:id="@+id/down_payment_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/apr_layout"
        android:layout_below="@id/down_payment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/APR"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/apr_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/loan_or_lease_group"
        android:gravity="center"
        android:layout_below="@id/apr_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/loan_button"
        android:paddingTop="15dp">

        <RadioButton
            android:id="@+id/loan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOANorlease"
            />

        <RadioButton
            android:id="@+id/lease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loanorLEASE"/>

    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seek_bar_linear"
        android:layout_below="@id/loan_or_lease_group"
        android:layout_centerHorizontal="true">

        <TextView

            android:id="@+id/seek_bar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seek_bar_text" />

        <TextView
            android:id="@+id/seek_bar_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />


    </LinearLayout>


    <SeekBar
        android:max="60"
        android:id="@+id/seek_bar"
        android:paddingBottom="15dp"
        android:layout_below="@id/seek_bar_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/seek_bar"
        android:layout_centerHorizontal="true"
        android:text="@string/calculate"
        android:onClick="buttonPressed"/>

    <TextView
        android:id="@+id/monthly_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_payment"
        android:layout_below="@id/calc_button"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/monthly_payment_total"
        android:layout_below="@id/monthly_payment"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_final"/>
</RelativeLayout>
